--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "react-toastify": "^11.0.5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
