feat: Add new components for Guided Reading, Hero Slider, Top Five Section, Video Sections, Week Photos, and Weekly Moments

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -22,10 +23,15 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
+    "emoji-picker-react": "^4.13.3",
+    "framer-motion": "^12.23.22",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.7.3",
