--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
