--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "reading",
   "private": true,
@@ -39,6 +38,7 @@
     "react": "^19.1.1",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
+    "react-easy-crop": "^5.5.3",
     "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
