--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "embla-carousel-react": "^8.6.0",
     "emoji-picker-react": "^4.13.3",
     "framer-motion": "^12.23.22",
+    "heic2any": "^0.0.4",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.544.0",
