--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ backend/media/
 backend/staticfiles/
 *.pyc
 __pycache__/
-*.sqlite3
+# *.sqlite3
 
 # Editor directories and files
 .vscode/*
@@ -32,3 +32,4 @@ __pycache__/
 *.sw?
 package-lock.json
 yarn.lock
+.env
