--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "npm install && npm run dev",    
+    "start": "npm install && npm run dev",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -36,7 +36,11 @@
     "heic2any": "^0.0.4",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "jodit": "^4.7.9",
+    "jodit-react": "^5.2.38",
     "lucide-react": "^0.544.0",
+    "@ckeditor/ckeditor5-react": "^7.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^42.0.1",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
