--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ backend/media/
 backend/staticfiles/
 *.pyc
 __pycache__/
-# *.sqlite3
+*.sqlite3
+db.sqlite3
 
 # Editor directories and files
 .vscode/*
