--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "i18n:extract": "i18next-scanner --config src/i18n/i18next-scanner.config.cjs"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^42.0.1",
+    "@ckeditor/ckeditor5-react": "^7.0.0",
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
@@ -30,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "emoji-picker-react": "^4.13.3",
     "framer-motion": "^12.23.22",
@@ -39,8 +42,6 @@
     "jodit": "^4.7.9",
     "jodit-react": "^5.2.38",
     "lucide-react": "^0.544.0",
-    "@ckeditor/ckeditor5-react": "^7.0.0",
-    "@ckeditor/ckeditor5-build-classic": "^42.0.1",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
