--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,4 @@ DJANGO_TIME_ZONE=UTC
 # Database configuration (defaults to SQLite when omitted)
 DJANGO_DB_ENGINE=django.db.backends.sqlite3
 DJANGO_DB_NAME=/app/db.sqlite3
+YOUTUBE_API_KEY=change-me
